Restore Windows functionality